Improved visibility of the donation button

--- a/po/link/general.css
+++ b/po/link/general.css
@@ -91,7 +91,13 @@ a
 .warning
 {
 	color: red;
-	font-size: 14px;
+	font-size: 18px;
 	padding: 20px;
 }
 
+.alert
+{
+	color: #0F538F;
+	font-size: 18px;
+	padding: 20px;
+}
